--- a/my-exercises/exercises_week4.ipynb
+++ b/my-exercises/exercises_week4.ipynb
@@ -264,14 +264,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_matrix():\n",
-    "    mat = []\n",
+    "def get_feature():\n",
+    "    matrix = []\n",
     "    for char in my_chars:\n",
     "        tmp = get_vector(char)\n",
-    "        mat.append(tmp)\n",
-    "    return mat\n",
+    "        matrix.append(tmp)\n",
+    "    feature = np.mat(matrix)\n",
+    "    return feature\n",
     "\n",
-    "X_am = get_matrix()"
+    "X_am = get_feature()"
    ]
   },
   {
