three point two

--- a/assignments/assignment3.ipynb
+++ b/assignments/assignment3.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
        " ...]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,6 +1126,7 @@
     "hero_text = []\n",
     "ambig_text = []\n",
     "vill_text = []\n",
+    "all_text = []\n",
     "\n",
     "h = './data/heroes'\n",
     "v = './data/villains'\n",
@@ -1151,6 +1152,7 @@
     "            tmp[\"index\"] = count\n",
     "            hero_names.append(tmp)\n",
     "            hero_text.append(this)\n",
+    "            all_text.append(this)\n",
     "        if(f == v):\n",
     "            this = get_clean_words(filename, \"villains\")\n",
     "            tmp = {}\n",
@@ -1159,6 +1161,7 @@
     "            tmp[\"index\"] = count\n",
     "            vill_names.append(tmp)\n",
     "            vill_text.append(this)\n",
+    "            all_text.append(this)\n",
     "        if(f == a):\n",
     "            this = get_clean_words(filename, \"ambiguous\")\n",
     "            tmp = {}\n",
@@ -1167,12 +1170,30 @@
     "            tmp[\"index\"] = count\n",
     "            ambig_names.append(tmp)\n",
     "            ambig_text.append(this)\n",
+    "            all_text.append(this)\n",
     "        count += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1877\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(all_text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1353,6 @@
     "                i = total_words.index(word)\n",
     "            except ValueError:\n",
     "                i = len(total_words)\n",
-    "                word_list.append(word)\n",
     "                total_words.append(word)\n",
     "            this_row[i] += 1\n",
     "        bow.append(this_row)"
@@ -1340,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -1353,8 +1373,7 @@
       "717\n",
       "1000\n",
       "1877\n",
-      "48176\n",
-      "[780, 26, 1639, 1643, 1491, 1501, 1584, 1547, 1528, 1754, 1780, 74, 1024, 772, 1086, 103, 507, 52, 159, 1175, 5, 5, 1388, 334, 440, 1058, 244, 924, 330, 49]\n"
+      "48176\n"
      ]
     }
    ],
@@ -1363,8 +1382,7 @@
     "print(len(hero_text))\n",
     "print(len(vill_text))\n",
     "print(len(bow))\n",
-    "print(len(total_words))\n",
-    "print(pages_containing_word[:30])"
+    "print(len(total_words))"
    ]
   },
   {
@@ -1398,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1439,10 @@
     "for row in bow:\n",
     "    tmp_row = []\n",
     "    for idx, val in enumerate(row):\n",
-    "        tf = val / float(len(row))\n",
+    "        try:\n",
+    "            tf = val / float(len(all_text[idx]))\n",
+    "        except:\n",
+    "            tf = val / 1\n",
     "        idf = math.log(1877 / pages_containing_word[idx])\n",
     "        tf_idf = tf * idf\n",
     "        tmp_row.append(tf_idf)\n",
@@ -1482,23 +1503,6 @@
     "psylock = tf_idf_matrix[52]\n",
     "print(psylock) \n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "comics\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(total_words[10])"
    ]
   },
   {
